# ghfanout

./: .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .secrets.baseline  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  pyproject.toml  release-please-config.json  sitemap.xml
.github/workflows/: ci.yml  docs.yml  release-please.yml
authentication/: index.html
cli/: index.html
configuration/: index.html
development/: index.html
docs/: authentication.md  cli.md  configuration.md  development.md  getting-started.md  index.md  templates.md
getting-started/: index.html
search/: search_index.json
src/ghfanout/: __init__.py  builder.py  cli.py  config.py  deploy.py  errors.py  github_client.py  scaffold.py
templates/: index.html
tests/: conftest.py  test_builder.py  test_cli.py  test_config.py  test_deploy.py  test_github_client.py  test_scaffold.py
